--- a/public/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/public/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -72,7 +72,7 @@ If you did an earlier SPA login in the same browser and used the save password f
 
 ![browser logged in](../images/420/browser-loggedin.jpg?v=20240922)
 
-When login completes, the app gets OAuth tokens, stores them in memory and returns itself to the foreground. It then gets data from a <a href='serverless-api-overview.mdx'>cloud hosted OAuth-secured API</a> and renders results.
+When login completes, the app gets OAuth tokens, stores them in memory in the main side of the app and returns itself to the foreground. It then gets data from a <a href='serverless-api-overview.mdx'>cloud hosted OAuth-secured API</a> and renders results.
 
 ### Step 4: View OAuth Configuration
 
